cabal-version:      3.0
name:               webview
version:            0.0.0.0
license:            MIT
license-file:       LICENSE
maintainer:         me@shun.technology
author:             Shuntaro Nishizawa
homepage:           https://github.com/shun-shobon/webview_haskell#readme
synopsis:           Haskell bindings for webview
category:           Graphics
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Graphics.WebView
  cxx-sources:      deps/webview.cpp deps/webview.h
  hs-source-dirs:   src
  default-language: Haskell2010
  extra-libraries:  stdc++
  build-depends:
    base
    , mtl   ^>=2.2.2
    , text  ^>=1.2

  if os(linux)
    pkgconfig-depends: gtk+-3.0 -any, webkit2gtk-4.0 -any

  if os(osx)
    cxx-options: -std=c++11
    frameworks:  WebKit

  if os(windows)
    cxx-options:     -mwindows
    extra-libraries:
      webview
      WebView2Loader

    if arch(x86_64)
      extra-lib-dirs: deps/dll/x64

    if arch(i386)
      extra-lib-dirs: deps/dll/x86
